Fix border shift

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -15,6 +15,7 @@
 
 .header nav a {
   padding: 5px 15px 6px;
+  border: 2px solid transparent;
   border-radius: 20px;
   text-decoration: none;
   font-weight: 500;
@@ -22,5 +23,5 @@
 
 .header nav a.active {
   background-color: var(--white);
-  border: 2px solid var(--text);
+  border-color: var(--text);
 }
